--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@faker-js/faker": "^8.3.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "cjs": "^0.0.11",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jest": "^29.7.0",
